# mpia-python-template

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml
_sources/api/: my_package.example.add_one.rst.txt
api/: my_package.example.add_one.html
docs/: conf.py  index.rst
src/my_package/: __init__.py  example.py
src/my_package/tests/: test_example.py
tests/: test_example.py
